# dj-prepare-playlists

./: .gitignore  Makefile  README.md  docker-compose.yml  spotify-config.example.json
cratekeeper-api/: Dockerfile  README.md  alembic.ini  pyproject.toml
cratekeeper-api/alembic/: env.py
cratekeeper-api/alembic/versions/: 0001_initial.py
cratekeeper-api/cratekeeper_api/: __init__.py  __main__.py  config.py  container.py  db.py  main.py  orm.py  schemas.py  secrets_store.py  security.py  seed.py
cratekeeper-api/cratekeeper_api/integrations/: __init__.py  anthropic_client.py  musicbrainz.py  spotify.py  tidal.py
cratekeeper-api/cratekeeper_api/jobs/: __init__.py  context.py  dependencies.py  engine.py  rate_limit.py  registry.py  sse.py
cratekeeper-api/cratekeeper_api/jobs/handlers/: __init__.py  analyze.py  apply_tags.py  build.py  classify.py  classify_tags.py  enrich.py  fetch.py  match.py  refetch.py  scan.py  sync.py  undo_tags.py
cratekeeper-api/cratekeeper_api/routers/: _auth.py  audit.py  events.py  health.py  jobs.py  library.py  settings.py
cratekeeper-api/cratekeeper_api/services/: audit.py  quality.py  slug.py
cratekeeper-api/tests/: conftest.py  test_dependencies.py  test_events.py  test_hardening.py  test_health.py  test_job_engine.py  test_pipeline.py  test_settings.py  test_sse.py
cratekeeper-web/: Dockerfile  README.md  index.html  nginx.conf  package.json  playwright.config.ts  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
cratekeeper-web/e2e/: pipeline.spec.ts  smoke.spec.ts
cratekeeper-web/src/: Analyze.tsx  AuditLog.tsx  Build.tsx  Dashboard.tsx  EventDetail.tsx  GenreBucketEditor.tsx  JobProgress.tsx  MasterLibrary.tsx  Match.tsx  Review.tsx  Settings.tsx  Sync.tsx  api.ts  (+5 more)
dj-cli/: Dockerfile  pyproject.toml
dj-cli/dj_cli/: cli.py  event_builder.py  library_builder.py  local_scanner.py  matcher.py  models.py  mood_analyzer.py  mood_config.py  musicbrainz_client.py  tag_writer.py
project/: ARCHITECTURE.md  DESIGN.md  PRD.md
src/: albums.ts  read.ts
tidal-mcp/: .gitignore  pyproject.toml
tidal-mcp/tidal_mcp/: __init__.py  auth.py  server.py  session.py
tidal-mcp/tidal_mcp/tools/: albums.py  playback.py  playlists.py  search.py
(+16 files in other folders)
