[project]
name = "cratekeeper-api"
version = "0.1.0"
description = "Cratekeeper FastAPI backend — orchestrates the cratekeeper pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "cryptography>=42",
    "httpx>=0.27",
    "anyio>=4.4",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
    "anthropic>=0.40",
    # Reused CLI engine
    "cratekeeper",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "testcontainers[postgres]>=4.7",
]

[project.scripts]
cratekeeper-api = "cratekeeper_api.__main__:main"

[tool.uv.sources]
cratekeeper = { path = "../cratekeeper-cli", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cratekeeper_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
