[project]
name = "dj-cli"
version = "1.0.0"
description = "CLI for DJ playlist preparation — fetch, classify, create playlists, sync to Tidal"
requires-python = ">=3.11"
dependencies = [
    "spotipy>=2.24.0",
    "tidalapi>=0.8.1",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "mutagen>=1.47.0",
    "thefuzz[speedup]>=0.22.0",
]

[project.scripts]
dj = "dj_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dj_cli"]
